--- a/frontend/src/css/_blogs.scss
+++ b/frontend/src/css/_blogs.scss
@@ -3,8 +3,42 @@ a {
 }
 
 .blogLink {
+	background: white;
+	width: 50%;
+	height: auto;
+	margin: 5rem auto;
+	box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.1); // padding: 1.6rem;
+	.mainContent {
+		width: 50%;
+		float: left;
+		margin-left: 2.5rem;
+		h3 {
+			font-size: 2.5rem;
+			height: 2.8rem;
+		}
+
+		h4 {
+			// margin-top: 10px;
+			font-size: 0.8rem;
+			color: #555;
+		}
+		p {
+			margin: 0;
+
+			margin-top: 5px;
+			font-size: 0.8rem;
+		}
+	}
+
 	img {
-		width: 30% !important;
-		margin-top: 30px;
+		height: auto;
+		width: 30%;
+		float: left;
+	}
+
+	&::after {
+		content: '';
+		clear: both;
+		display: table;
 	}
 }
