--- a/frontend/src/css/_blogs.scss
+++ b/frontend/src/css/_blogs.scss
@@ -42,3 +42,32 @@ a {
 		display: table;
 	}
 }
+
+.BlogPost {
+	border: solid 1px red;
+	text-align: center;
+	width: 60%;
+	margin: auto;
+	line-height: 2.1rem;
+	margin-top: 45px;
+	h1 {
+		font-size: 4rem;
+	}
+	.tags {
+		font-style: italic;
+		color: #555;
+		margin-top: 40px;
+	}
+	.description {
+		margin-top: 40px;
+		font-size: 1.4rem;
+	}
+	h2 {
+		font-size: 2rem;
+	}
+
+	p {
+		font-size: 1.4rem;
+		margin: 6rem;
+	}
+}
