--- a/frontend/src/css/_blogs.scss
+++ b/frontend/src/css/_blogs.scss
@@ -19,14 +19,14 @@ a {
 
 		h4 {
 			// margin-top: 10px;
-			font-size: 0.8rem;
+			font-size: 1rem;
 			color: #555;
 		}
 		p {
 			margin: 0;
 
 			margin-top: 5px;
-			font-size: 0.8rem;
+			font-size: 1.2rem;
 		}
 	}
 
@@ -47,6 +47,8 @@ a {
 	border: solid 1px red;
 	text-align: center;
 	width: 60%;
+	max-width: 1100px;
+	min-width: 500px;
 	margin: auto;
 	line-height: 2.1rem;
 	margin-top: 45px;
