--- a/frontend/src/css/main.scss
+++ b/frontend/src/css/main.scss
@@ -136,8 +136,8 @@ h6 {
 	position: absolute;
 
 	left: 50%;
-	margin-right: -100px;
-	margin-bottom: -100px;
+	margin-left: -100px;
+	margin-top: -100px;
 	top: 50%;
 }
 
