--- a/frontend/src/css/_header.scss
+++ b/frontend/src/css/_header.scss
@@ -36,7 +36,10 @@ header {
 
 .resetLink {
 	color: white;
-	text-decoration: none;
+	&:hover {
+		color: white;
+	}
+	text-decoration: none !important;
 }
 
 .navLink {
