--- a/frontend/src/css/_blogs.scss
+++ b/frontend/src/css/_blogs.scss
@@ -8,6 +8,8 @@ a {
 	height: auto;
 	margin: 5rem auto;
 	box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.1); // padding: 1.6rem;
+	max-height: 152px;
+	max-width: 1100px;
 	.mainContent {
 		width: 50%;
 		float: left;
@@ -34,6 +36,8 @@ a {
 		height: auto;
 		width: 30%;
 		float: left;
+		max-height: 120px;
+		max-width: 255px;
 	}
 
 	&::after {
@@ -45,7 +49,7 @@ a {
 
 .BlogPost {
 	text-align: center;
-	width: 80%;
+	width: 50%;
 	max-width: 1100px;
 	min-width: 500px;
 	margin: auto;
@@ -73,4 +77,10 @@ a {
 		font-size: 1.4rem;
 		margin: 2rem;
 	}
+}
+
+.media {
+	padding: 1rem;
+	width: 80%;
+	margin: 4rem auto;
 }
