--- a/frontend/src/css/_blogs.scss
+++ b/frontend/src/css/_blogs.scss
@@ -49,9 +49,9 @@ a {
 
 .BlogPost {
 	text-align: center;
-	width: 50%;
+
 	max-width: 1100px;
-	min-width: 500px;
+	// min-width: 500px;
 	margin: auto;
 	line-height: 2.1rem;
 	margin-top: 45px;
@@ -76,6 +76,16 @@ a {
 	p {
 		font-size: 1.4rem;
 		margin: 2rem;
+	}
+
+	width: 50%;
+
+	@include tablet {
+		width: 70%;
+	}
+
+	@include mobile {
+		width: 90%;
 	}
 }
 
