--- a/frontend/src/css/_blogs.scss
+++ b/frontend/src/css/_blogs.scss
@@ -2,13 +2,47 @@ a {
 	color: black;
 }
 
+.Blogs {
+	display: flex;
+	height: 100%;
+	min-height: 520px;
+	.sidebar {
+		background: darken(nth($colors, 1), 5%);
+		padding: 2rem;
+		text-align: center;
+		h2 {
+			font-weight: bold;
+		}
+		ul {
+			list-style: none;
+			padding: 0;
+			margin: 1rem auto 0 auto;
+			li {
+				padding: 0.5rem;
+				transition: color 0.2s;
+				&:hover {
+					cursor: pointer;
+					color: #555;
+				}
+			}
+		}
+	}
+	.blogList {
+		margin-left: 1px;
+	}
+}
+
+.selectedTag {
+	color: #888;
+}
+
 .blogLink {
 	background: white;
 	width: 50%;
 	height: auto;
 	margin: 5rem auto;
 	box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.1); // padding: 1.6rem;
-	max-height: 152px;
+	// max-height: 152px;
 	max-width: 1100px;
 	.mainContent {
 		width: 50%;
