--- a/frontend/src/css/_header.scss
+++ b/frontend/src/css/_header.scss
@@ -1,19 +1,19 @@
 .logo {
-	display: inline-block;
 	font-size: 3em;
-	display: inline-block;
-	padding: 0.3em 0.7em;
+	padding: 0.2em 0.7em;
 }
 
 header {
 	background: black;
 	color: white;
+	display: flex;
 	nav {
-		display: inline-block;
 		ul {
+			vertical-align: middle;
 			list-style: none;
 			padding: 0;
 			margin: 0;
+			margin-top: 11%;
 			//Font size Fixes a weird bug
 			font-size: 0;
 			li {
