--- a/frontend/src/css/_blogs.scss
+++ b/frontend/src/css/_blogs.scss
@@ -2,33 +2,35 @@ a {
 	color: black;
 }
 
-.Blogs {
+.mainItemDisplay {
 	display: flex;
 	height: 100%;
 	min-height: 900px;
-	.sidebar {
-		background: darken(nth($colors, 1), 5%);
-		padding: 2rem;
-		text-align: center;
-		h2 {
-			font-weight: bold;
-		}
-		ul {
-			list-style: none;
-			padding: 0;
-			margin: 1rem auto 0 auto;
-			li {
-				padding: 0.3rem;
-				transition: color 0.2s;
-				&:hover {
-					cursor: pointer;
-					color: #555;
-				}
-			}
-		}
-	}
+
 	.blogList {
 		margin-left: 1px;
+	}
+}
+
+.sidebar {
+	background: darken(nth($colors, 1), 5%);
+	padding: 2rem;
+	text-align: center;
+	h2 {
+		font-weight: bold;
+	}
+	ul {
+		list-style: none;
+		padding: 0;
+		margin: 1rem auto 0 auto;
+		li {
+			padding: 0.3rem;
+			transition: color 0.2s;
+			&:hover {
+				cursor: pointer;
+				color: #55c;
+			}
+		}
 	}
 }
 
