--- a/frontend/src/css/_plugin.scss
+++ b/frontend/src/css/_plugin.scss
@@ -1,2 +1,34 @@
+$margin: 35px;
 .plugin {
+	display: inline-table;
+	margin-left: $margin;
+	margin-top: $margin;
+
+	img {
+		display: block;
+		margin: auto;
+		width: 100%;
+	}
+
+	h2,
+	h3 {
+		font-size: 1.2rem;
+	}
+
+	background: white;
+	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.14);
+
+	.pluginPrice {
+		font-style: italic;
+		color: #555;
+		font-size: 1.1rem;
+	}
+}
+
+.pluginBottom {
+	padding: 20px;
+
+	* {
+		margin: 8px;
+	}
 }
