--- a/frontend/src/css/_blogs.scss
+++ b/frontend/src/css/_blogs.scss
@@ -1,50 +1,9 @@
-a {
-	color: black;
-}
-
-.mainItemDisplay {
-	display: flex;
-	height: 100%;
-	min-height: 900px;
-
-	.blogList {
-		margin-left: 1px;
-	}
-}
-
-.sidebar {
-	background: darken(nth($colors, 1), 5%);
-	padding: 2rem;
-	text-align: center;
-	h2 {
-		font-weight: bold;
-	}
-	ul {
-		list-style: none;
-		padding: 0;
-		margin: 1rem auto 0 auto;
-		li {
-			padding: 0.3rem;
-			transition: color 0.2s;
-			&:hover {
-				cursor: pointer;
-				color: #55c;
-			}
-		}
-	}
-}
-
-.selectedTag {
-	color: #88c;
-}
-
 .blogLink {
 	background: white;
 	width: 50%;
 	height: auto;
 	margin: 5rem auto;
-	box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.1); // padding: 1.6rem;
-	// max-height: 152px;
+	box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.1);
 	max-width: 1100px;
 	.mainContent {
 		width: 50%;
@@ -56,7 +15,6 @@ a {
 		}
 
 		h4 {
-			// margin-top: 10px;
 			font-size: 1rem;
 			color: #555;
 		}
