--- a/frontend/src/css/_plugin.scss
+++ b/frontend/src/css/_plugin.scss
@@ -29,6 +29,9 @@ $margin: 35px;
 		color: #555;
 		font-size: 1.1rem;
 	}
+
+
+	
 }
 
 .pluginBottom {
@@ -36,5 +39,11 @@ $margin: 35px;
 
 	* {
 		margin: 8px;
+	}
+
+	button{
+		a{
+			color:white !important;
+		}
 	}
 }
